All_Component_DX/force-app/main/default/objects/Service_Group_Site__c/fields/Break_Hours__c.field-meta.xml
<CustomField>
    <fullName>Break_Hours__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Break hours applicable to the technician when this home base is used. Reference to an existing Business Hours record in Salesforce</description>
    <label>Break Hours</label>
    <referenceTo>BusinessHours</referenceTo>
    <relationshipLabel>Locations Covered (Break Hours)</relationshipLabel>
    <relationshipName>Service_Group_Site2</relationshipName>
    <type>Lookup</type>
</CustomField>