All_Component_DX/force-app/main/default/objects/Service_Group_Site__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>City part of the home base address</description>
    <label>City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>