All_Component_DX/force-app/main/default/objects/Service_Group_Site__c/fields/Days__c.field-meta.xml
<CustomField>
    <fullName>Days__c</fullName>
    <description>Indicates which days of the week this home base applies to. Calculated automatically</description>
    <formula>&apos;Test&apos;</formula>
    <label>Days</label>
    <type>Text</type>
</CustomField>