All_Component_DX/force-app/main/default/objects/Service_Group_Site__c/fields/IsCurrent__c.field-meta.xml
<CustomField>
    <fullName>IsCurrent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this home base should be considered as the current home base for the technician</description>
    <label>IsCurrent</label>
    <type>Checkbox</type>
</CustomField>