All_Component_DX/force-app/main/default/objects/Service_Group_Site__c/fields/Overtime_Hours__c.field-meta.xml
<CustomField>
    <fullName>Overtime_Hours__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Overtime hours applicable to the technician when this home base is used. Reference to an existing Business Hours record in Salesforce</description>
    <label>Overtime Hours</label>
    <referenceTo>BusinessHours</referenceTo>
    <relationshipLabel>Locations Covered (Overtime Hours)</relationshipLabel>
    <relationshipName>Service_Group_Site3</relationshipName>
    <type>Lookup</type>
</CustomField>