All_Component_DX/force-app/main/default/objects/Service_Group_Site__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Location covered by the service team. Not used</description>
    <label>Location</label>
    <referenceTo>Site__c</referenceTo>
    <relationshipLabel>Locations Covered</relationshipLabel>
    <relationshipName>Service_Group_Site</relationshipName>
    <type>Lookup</type>
</CustomField>