All_Component_DX/force-app/main/default/objects/Service_Group_Site__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Effective date for the home base. Not used</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>