All_Component_DX/force-app/main/default/objects/Service_Group_Site__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>State part of the home base address</description>
    <label>State</label>
    <length>100</length>
    <type>Text</type>
</CustomField>