All_Component_DX/force-app/main/default/objects/Service_Group_Site__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <description>Street part of the home base address</description>
    <label>Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>