All_Component_DX/force-app/main/default/objects/Service_Group_Site__c/recordTypes/Home_Bases.recordType-meta.xml
<RecordType>
    <fullName>Home_Bases</fullName>
    <active>true</active>
    <description>Home Bases</description>
    <label>Home Bases</label>
</RecordType>